--- a/notebooks/01_data_exploration.ipynb
+++ b/notebooks/01_data_exploration.ipynb
@@ -9,7 +9,8 @@
     "import pandas as pd\n",
     "import os\n",
     "import glob\n",
-    "files = glob.glob('data/raw/**/*.csv', recursive=True)\n",
+    "files = glob.glob('data/raw/**/*1F96863*Dataset_*.csv', recursive=True)\n",
+    "assert len(files) > 0, 'NCD dataset not found under data/raw'\n",
     "df = pd.read_csv(files[0])\n",
     "df = df.drop_duplicates()\n",
     "df = df.fillna(method='ffill')\n",
@@ -27,7 +28,7 @@
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv('data/processed/cleaned.csv')\n",
-    "df.describe()\n"
+    "df[['DIM_TIME','Sex','RATE_PER_100_N','RATE_PER_100_NL','RATE_PER_100_NU']].head()\n"
    ]
   }
  ],
