--- a/notebooks/02_feature_engineering.ipynb
+++ b/notebooks/02_feature_engineering.ipynb
@@ -7,15 +7,19 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n",
     "import os\n",
     "df = pd.read_csv('data/processed/cleaned.csv')\n",
-    "numeric = df.select_dtypes(include=['number'])\n",
-    "for c in numeric.columns:\n",
-    "    df[c] = (df[c] - df[c].mean()) / (df[c].std() + 1e-9)\n",
+    "df = df.sort_values('DIM_TIME')\n",
+    "def build_features(sub):\n",
+    "    sub = sub.copy()\n",
+    "    sub['rate'] = sub['RATE_PER_100_N']\n",
+    "    sub['yoy_change'] = sub['rate'].pct_change()\n",
+    "    sub['rolling_mean_3'] = sub['rate'].rolling(3).mean()\n",
+    "    return sub[['DIM_TIME','Sex','rate','yoy_change','rolling_mean_3']]\n",
+    "features = df.groupby('Sex').apply(build_features).reset_index(drop=True)\n",
     "os.makedirs('data/processed', exist_ok=True)\n",
-    "df.to_csv('data/processed/features.csv', index=False)\n",
-    "df.head()\n"
+    "features.to_csv('data/processed/features.csv', index=False)\n",
+    "features.head()\n"
    ]
   }
  ],
