--- a/notebooks/03_modeling.ipynb
+++ b/notebooks/03_modeling.ipynb
@@ -8,31 +8,47 @@
    "source": [
     "import pandas as pd\n",
     "import os\n",
-    "import numpy as np\n",
-    "from sklearn.ensemble import RandomForestClassifier, RandomForestRegressor\n",
-    "import joblib\n",
-    "path = 'data/processed/features.csv'\n",
-    "if not os.path.exists(path):\n",
-    "    path = 'data/processed/cleaned.csv'\n",
+    "import matplotlib.pyplot as plt\n",
+    "path = 'data/processed/cleaned.csv'\n",
+    "assert os.path.exists(path), 'Run 01_data_exploration.ipynb first'\n",
     "df = pd.read_csv(path)\n",
-    "target = None\n",
-    "for t in ['stress_level','target','label']:\n",
-    "    if t in df.columns:\n",
-    "        target = t\n",
-    "        break\n",
-    "if target is None:\n",
-    "    df['stress_level'] = np.random.choice(['low','medium','high'], size=len(df))\n",
-    "    target = 'stress_level'\n",
-    "X = df.drop(columns=[target])\n",
-    "y = df[target]\n",
-    "if y.dtype == 'object':\n",
-    "    model = RandomForestClassifier()\n",
-    "else:\n",
-    "    model = RandomForestRegressor()\n",
-    "model.fit(X, y)\n",
-    "os.makedirs('models', exist_ok=True)\n",
-    "joblib.dump(model, 'models/trained_model.pkl')\n"
+    "assert {'DIM_TIME','Sex','RATE_PER_100_N'}.issubset(df.columns), 'Required columns missing'\n",
+    "pivot = df.pivot_table(index='DIM_TIME', columns='Sex', values='RATE_PER_100_N')\n",
+    "pivot.head()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Gender gap and change KPIs\n",
+    "first_year = pivot.index.min()\n",
+    "last_year = pivot.index.max()\n",
+    "kpis = {}\n",
+    "if 'Total' in pivot.columns:\n",
+    "    kpis['delta_total'] = pivot.loc[last_year,'Total'] - pivot.loc[first_year,'Total']\n",
+    "if {'Male','Female'}.issubset(pivot.columns):\n",
+    "    kpis['avg_gap_male_female'] = (pivot['Male'] - pivot['Female']).mean()\n",
+    "kpis\n"
+    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot trends with optional uncertainty bands if available\n",
+    "plt.figure(figsize=(8,5))\n",
+    "for col in pivot.columns:\n",
+    "    plt.plot(pivot.index, pivot[col], label=col)\n",
+    "plt.xlabel('Year')\n",
+    "plt.ylabel('Rate per 100 (ages 30–70)')\n",
+    "plt.legend()\n",
+    "plt.show()\n"
+    ]
   }
  ],
  "metadata": {
